[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap = "0.7.0"
rayon = "1.8"
smallvec = "1.13.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "bench_all_the_things"
harness = false
